--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -9,7 +9,17 @@
 	</head>
 
 	<body>
-		<img src="banner.jpg">
+		<div vw class="enabled">
+			<div vw-access-button class="active"></div>
+			<div vw-plugin-wrapper>
+			  <div class="vw-plugin-top-wrapper"></div>
+			</div>
+		  </div>
+		  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+		  <script>
+			new window.VLibras.Widget('https://vlibras.gov.br/app');
+		  </script>
+		<img id="banner" src="banner.jpg">
 		<h1 >Sobre a Barbearia Alura</h1>
  
 		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -17,5 +27,13 @@
 		<p id="missao" ><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
 		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		<h2>Beneficios</h2>
+
+		<ul>
+			<li>Atendimento aos clientes</li>
+			<li>Espaço diferenciado</li>
+			<li>Localização</li>
+			<li>Profissionais Qualificados</li>
+		</ul>
 	</body>
 </html>
