--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -38,7 +38,7 @@
 			<li>Localização</li>
 			<li>Profissionais Qualificados</li>
 		</ul>
-		<img src="beneficios.jpg">
+		<img src="beneficios.jpg"  class="imagembeneficios">
 	</div>
 	</body>
 </html>
