--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -9,6 +9,10 @@
 	</head>
 
 	<body>
+		<header> <!--cabeçalho da página, diferente de head-->
+			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
+		</header>
 		<div vw class="enabled">
 			<div vw-access-button class="active"></div>
 			<div vw-plugin-wrapper>
@@ -21,7 +25,7 @@
 		  </script>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-		<h1 >Sobre a Barbearia Alura</h1>
+		<h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
  
 		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -31,7 +35,7 @@
 		
 	</div>
 	<div class="beneficios">
-	<h2>Beneficios</h2>
+	<h3 class="titulo-centralizado">Beneficios</h3>
 		<ul class="itens">
 			<li>Atendimento aos clientes</li>
 			<li>Espaço diferenciado</li>
@@ -41,4 +45,5 @@
 		<img src="beneficios.jpg"  class="imagembeneficios">
 	</div>
 	</body>
+	<script src="index.js"></script>
 </html>
