--- a/Aula 3 completa/produtos.html
+++ b/Aula 3 completa/produtos.html
@@ -12,9 +12,9 @@
     <header>
         <h1><img src="logo.png"></h1>
         <ul>
-            <li>Home</li>
-            <li>Produtos</li>
-            <li>Contatos</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contatos</a></li>
         </ul>
     </header>
 </body>
