--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -23,7 +23,7 @@
 		  <script>
 			new window.VLibras.Widget('https://vlibras.gov.br/app');
 		  </script>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="./img/banner.jpg">
 		<div class="principal">
 		<h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
  
@@ -42,7 +42,7 @@
 			<li>Localização</li>
 			<li>Profissionais Qualificados</li>
 		</ul>
-		<img src="beneficios.jpg"  class="imagembeneficios">
+		<img src="./img/beneficios.jpg"  class="imagembeneficios">
 	</div>
 	</body>
 	<script src="index.js"></script>
