--- a/Aula 3 completa/produtos.html
+++ b/Aula 3 completa/produtos.html
@@ -29,22 +29,22 @@
           <li>
             <h2>Cabelo</h2>
             <img src="./img/cabelo.jpg">
-            <p>Na tesoura ou na máquina, como o cliente escolher</p>
-            <p><strong>R$ 25,00</strong></p>
+            <p class="produto-descricao">Na tesoura ou na máquina, como o cliente escolher</p>
+            <p class="preco-produto">R$ 25,00</p>
         </li>
 
            <li>
             <h2>Barba</h2>
             <img src="./img/barba.jpg">
-            <p>Corte e desenho profissional de barba</p>
-            <p><strong>R$ 18,00</strong></p>
+            <p class="produto-descricao">Corte e desenho profissional de barba</p>
+            <p class="preco-produto">R$ 18,00</p>
         </li>
 
             <li>
                 <h2>Cabelo + Barba</h2>
                 <img src="./img/cabelo+barba.jpg">
-                <p>Pacote completo de cabelo e barba</p>
-                <p><strong>R$ 35,00</strong></p>
+                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                <p class="preco-produto">R$ 35,00</p>
             </li>
        
         </ul>
