--- a/Aula 3 completa/produtos.html
+++ b/Aula 3 completa/produtos.html
@@ -61,6 +61,10 @@
         </ul>
        
     </main>
+    <footer>
+        <img src="./img/logo-branco.png">
+        <p>Copyright Barbearia Alura 2023</p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
