--- a/Aula 3 completa/produtos.html
+++ b/Aula 3 completa/produtos.html
@@ -63,7 +63,7 @@
     </main>
     <footer>
         <img src="./img/logo-branco.png">
-        <p>Copyright Barbearia Alura 2023</p>
+        <p class="copyright">&copy; Copyright Barbearia Alura 2023</p>
     </footer>
     <script src="index.js"></script>
 </body>
