--- a/Aula 3 completa/contato.html
+++ b/Aula 3 completa/contato.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Contatos - Barbearia Alura</title>
     <link rel="stylesheet" href="./reset.css"> <!--o reset tem que vir primeiro pra limpar o que o navegador deixa e assim aplicar o que queremos-->
-    <link rel="stylesheet" href="./produtos.css">
+    <link rel="stylesheet" href="./styles.css">
    
     </style>
 </head>
@@ -35,7 +35,14 @@
 </div><button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
     </header>
 <main>
-    teste
+    <label for="nomesobrenome">Nome e Sobrenome</label>
+    <input type="text" id="nomesobrenome">
+
+    <label for="email">Email</label>
+    <input type="text" id="email">
+
+    <label for="telefone">Telefone</label>
+    <input type="text" id="telefone">
 </main>
 
     <footer>
