--- a/Aula 3 completa/produtos.html
+++ b/Aula 3 completa/produtos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="./reset.css"> <!--o reset tem que vir primeiro pra limpar o que o navegador deixa e assim aplicar o que queremos-->
-    <link rel="stylesheet" href="./produtos.css">
+    <link rel="stylesheet" href="./styles.css">
    
     </style>
 </head>
