--- a/Aula 3 completa/contato.html
+++ b/Aula 3 completa/contato.html
@@ -35,6 +35,7 @@
 </div><button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
     </header>
 <main>
+    <form>
     <label for="nomesobrenome">Nome e Sobrenome</label>
     <input type="text" id="nomesobrenome">
 
@@ -43,6 +44,9 @@
 
     <label for="telefone">Telefone</label>
     <input type="text" id="telefone">
+
+    <input type="submit" value="Enviar formulário">
+</form>
 </main>
 
     <footer>
