um pouco mais do formulario

--- a/Aula 3 completa/contato.html
+++ b/Aula 3 completa/contato.html
@@ -46,6 +46,18 @@
     <input type="text" id="telefone">
 
     <input type="submit" value="Enviar formulário">
+
+    <label for="mensagem">Mensagem</label>
+    <textarea cols="70" rows="10" id="mensagem"></textarea>
+
+        <label for="radio-email">Email</label>
+    <input type="radio" value="email" id="radio-email">
+
+    <label for="telefone-radio">Telefone</label>
+    <input type="radio" value="telefone" id="telefone-radio">
+
+    <label for="whatsapp-radio">Whatsapp</label>
+    <input type="radio" value="whatsapp" id="whatsapp-radio">
 </form>
 </main>
 
