--- a/Aula 3 completa/contato.html
+++ b/Aula 3 completa/contato.html
@@ -45,19 +45,26 @@
     <label for="telefone">Telefone</label>
     <input type="text" id="telefone">
 
+    <label for="mensagem">Mensagem</label>
+    <textarea cols="70" rows="10" id="mensagem"></textarea>  
+
+
+    <div>
+
+        <p>Como prefere o nosso contato?</p>
+        <label for="radio-email">Email</label>
+        <input type="radio" name="contato" value="email" id="radio-email">
+
+        <label for="telefone-radio">Telefone</label>
+        <input type="radio" name="contato" value="telefone" id="telefone-radio">
+
+        <label for="whatsapp-radio">Whatsapp</label>
+        <input type="radio" name="contato" value="whatsapp" id="whatsapp-radio">
+    </div>
+
+    <label><input type="checkbox">Gostaria de receber nossas novidades por email?</label>
     <input type="submit" value="Enviar formulário">
 
-    <label for="mensagem">Mensagem</label>
-    <textarea cols="70" rows="10" id="mensagem"></textarea>
-
-        <label for="radio-email">Email</label>
-    <input type="radio" value="email" id="radio-email">
-
-    <label for="telefone-radio">Telefone</label>
-    <input type="radio" value="telefone" id="telefone-radio">
-
-    <label for="whatsapp-radio">Whatsapp</label>
-    <input type="radio" value="whatsapp" id="whatsapp-radio">
 </form>
 </main>
 
