ajustes de acessibilidade

--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -23,7 +23,7 @@
 		  <script>
 			new window.VLibras.Widget('https://vlibras.gov.br/app');
 		  </script>
-		<img id="banner" src="./img/banner.jpg">
+		<img id="banner" src="./img/banner.jpg" alt="imagem de um salao de barbeiro com uma cadeira e um fundo rústico">
 		<div class="principal">
 		<h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
  
