--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="index.css">
+		<!-- <link rel="stylesheet" href="index.css"> -->
+		<link rel="stylesheet" href="./reset.css"> <!--o reset tem que vir primeiro pra limpar o que o navegador deixa e assim aplicar o que queremos-->
+		<link rel="stylesheet" href="./styles.css">
 
 	
 	</head>
 
 	<body>
-		<header> <!--cabeçalho da página, diferente de head-->
+	<!--	<header> 
 			<h1 class="titulo-principal">Barbearia Alura</h1>
 			<button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
 		</header>
@@ -22,8 +24,32 @@
 		  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 		  <script>
 			new window.VLibras.Widget('https://vlibras.gov.br/app');
+		  </script> -->
+		  <div vw class="enabled">
+			<div vw-access-button class="active"></div>
+			<div vw-plugin-wrapper>
+			  <div class="vw-plugin-top-wrapper"></div>
+			</div>
+		  </div>
+		  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+		  <script>
+			new window.VLibras.Widget('https://vlibras.gov.br/app');
 		  </script>
+		<header>
+			<div class="caixa">
+			<h1><img src="./img/logo.png"></h1>
+			<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="produtos.html">Produtos</a></li>
+				<li><a href="contato.html">Contatos</a></li>
+			</ul>
+			
+		</nav>
+	</div><button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
+		</header>
 		<img id="banner" src="./img/banner.jpg" alt="imagem de um salao de barbeiro com uma cadeira e um fundo rústico">
+		<main>
 		<div class="principal">
 		<h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
  
@@ -44,6 +70,12 @@
 		</ul>
 		<img src="./img/beneficios.jpg"  class="imagembeneficios">
 	</div>
+	<footer>
+        <img src="./img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura 2023</p>
+	</main>
+    </footer>
+    <script src="index.js"></script>
 	</body>
 	<script src="index.js"></script>
 </html>
