--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -48,10 +48,10 @@
 		</nav>
 	</div><button id="changeColorButton"><strong>Mudar para modo escuro</strong></button>
 		</header>
-		<img id="banner" src="./img/banner.jpg" alt="imagem de um salao de barbeiro com uma cadeira e um fundo rústico">
+		<img class="banner" src="./img/banner.jpg" alt="imagem de um salao de barbeiro com uma cadeira e um fundo rústico">
 		<main>
-		<div class="principal">
-		<h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
+		<section class="principal">
+		<h2 class="titulo-principal"> Sobre a Barbearia Alura</h2>
  
 		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -59,8 +59,8 @@
 
 		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		
-	</div>
-	<div class="beneficios">
+	</section>
+	<section class="beneficios">
 	<h3 class="titulo-centralizado">Beneficios</h3>
 		<ul class="itens">
 			<li>Atendimento aos clientes</li>
@@ -69,7 +69,7 @@
 			<li>Profissionais Qualificados</li>
 		</ul>
 		<img src="./img/beneficios.jpg"  class="imagembeneficios">
-	</div>
+	</section>
 	<footer>
         <img src="./img/logo-branco.png">
         <p class="copyright">&copy; Copyright Barbearia Alura 2023</p>
