--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -6,7 +6,7 @@
 		<!-- <link rel="stylesheet" href="index.css"> -->
 		<link rel="stylesheet" href="./reset.css"> <!--o reset tem que vir primeiro pra limpar o que o navegador deixa e assim aplicar o que queremos-->
 		<link rel="stylesheet" href="./styles.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	
 	</head>
 
@@ -52,6 +52,8 @@
 		<main>
 		<section class="principal">
 		<h2 class="titulo-principal"> Sobre a Barbearia Alura</h2>
+
+		<img class="utensilios" src="img/utensilios.jpg">
  
 		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -61,7 +63,7 @@
 		
 	</section>
 	<section class="beneficios">
-	<h3 class="titulo-centralizado">Beneficios</h3>
+	<h3 class="titulo-principal">Beneficios</h3>
 		<ul class="itens">
 			<li>Atendimento aos clientes</li>
 			<li>Espaço diferenciado</li>
