--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -62,6 +62,13 @@
 		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		
 	</section>
+	<section class="mapa">
+		<h3 class="titulo-principal">Nosso estabelecimento</h3>
+		<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.2552990091503!2d-43.21178168949143!3d-22.5321073245018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x990854afe3849f%3A0xafd20246b768238a!2sParque%20Tecnol%C3%B3gico%20Regi%C3%A3o%20Serrana!5e0!3m2!1spt-BR!2sbr!4v1682081304513!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+	</section>
 	<section class="beneficios">
 	<h3 class="titulo-principal">Beneficios</h3>
 		<ul class="itens">
