--- a/Aula 3 completa/index.html
+++ b/Aula 3 completa/index.html
@@ -65,19 +65,29 @@
 	<section class="mapa">
 		<h3 class="titulo-principal">Nosso estabelecimento</h3>
 		<p>Nosso estabelecimento está localizado no coração da cidade.</p>
-
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.2552990091503!2d-43.21178168949143!3d-22.5321073245018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x990854afe3849f%3A0xafd20246b768238a!2sParque%20Tecnol%C3%B3gico%20Regi%C3%A3o%20Serrana!5e0!3m2!1spt-BR!2sbr!4v1682081304513!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+ <div class="mapa-conteudo">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.2552990091503!2d-43.21178168949143!3d-22.5321073245018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x990854afe3849f%3A0xafd20246b768238a!2sParque%20Tecnol%C3%B3gico%20Regi%C3%A3o%20Serrana!5e0!3m2!1spt-BR!2sbr!4v1682081304513!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	</div>
 	</section>
 	<section class="beneficios">
 	<h3 class="titulo-principal">Beneficios</h3>
-		<ul class="itens">
-			<li>Atendimento aos clientes</li>
-			<li>Espaço diferenciado</li>
-			<li>Localização</li>
-			<li>Profissionais Qualificados</li>
-		</ul>
-		<img src="./img/beneficios.jpg"  class="imagembeneficios">
+
+	<div class="conteudo-beneficios">
+		<ul class="lista-beneficios">
+			<li class="itens">Atendimento aos clientes</li>
+			<li class="itens">Espaço diferenciado</li>
+			<li class="itens">Localização</li>
+			<li class="itens">Profissionais Qualificados</li>
+			<li class="itens">Pontualidade</li>
+			<li class="itens">Limpeza</li>
+
+		</ul><img src="./img/beneficios.jpg"  class="imagem-beneficios">
+
+	</div>
+
+		<div class="video">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 	</section>
 	<footer>
         <img src="./img/logo-branco.png">
